# connect4-python-module

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements_dev.txt  setup.cfg
.github/workflows/: lint.yml  publish-to-pypi.yml  publish-to-test-pypi.yml
src/: main.py
src/connect4/: __init__.py  __main__.py  core.py  errors.py
tests/: test_connect4.py
