[metadata]
name = connect4
description = play connect 4
author = airo.pi_
license = MIT
license_file = LICENSE
version = 0.0.1

[options]
packages =
    connect4
python_requires = >=3.10
package_dir =
    =src

[options.extras_require]
testing =
    flake8>=4.0.1
    tox>=3.25.0
    pytest>=7.1.2
    mypy>=0.950

[options.package_data]
connect4 = py.typed

[flake8]
max-line-length = 160
